src/log/build_2022-03-06_15-59-17/humandetection/stderr.log
  File "/home/jakeluo/Documents/MonitoringSystemRos2/src/install/humandetection/lib/python3.8/site-packages/humandetection/models/experimental.py", line 139
    if len(model) == 1:
                      ^
SyntaxError: invalid syntax

